# vlm-playground

./: .gitignore  LICENSE  README.md  pyproject.toml
demo_apps/: draw_point.py  live_object_detection_app.py
docs/bruno/vlm-inference-server/: Caption.bru  Get health.bru  Health.bru  bruno.json
src/: main.py
src/models/: __init__.py  fast_vlm.py  moondream.py
src/server/: __init__.py  server.py
src/server/core/: config.py
